Style and Index Update

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <body>
 
     <div class="container">
-        <h2>Minha Lista de Tarefas 📝</h2>
+        <h2>Lista de Tarefas 📝</h2>
         
         <div class="input-group">
             <input type="text" id="inputTarefa" placeholder="Digite uma tarefa...">
